--- a/zeeslag/index.html
+++ b/zeeslag/index.html
@@ -1,15 +1,31 @@
 <html>
 <head>
     <title>Index: Zeeslag</title>
-    <script src="scripts/zeeslag.js"></script>
+    <script src="scripts/username.js"></script>
+    <link href="style/style.css" rel="stylesheet" type="text/css">
+    <link href="style/index.css" rel="stylesheet" type="text/css">
 
 </head>
 
 <body>
-<p>Wat is je naam?</p>
-<input id="username" type="text"><br>
-<button id="button" onclick="createUser()">Enter</button>
-
+<h1 align="center">ZEESLAG</h1>
+<center>
+<div id="animatie"></div>
+<div id="animatie"></div>
+<div id="animatie"></div>
+<div id="animatie"></div>
+<div id="animatie"></div>
+<div id="animatie"></div>
+    <p>Wat is je naam?</p>
+    <input id="username" type="text"><br>
+    <div id = "buttoncontainer"><button id="button" onclick="speler()">Enter</button></div>
+<div id="animatie"></div>
+<div id="animatie"></div>
+<div id="animatie"></div>
+<div id="animatie"></div>
+<div id="animatie"></div>
+<div id="animatie"></div>
+</center>
 </body>
 
 </html>
