--- a/zeeslag/zeeslag.html
+++ b/zeeslag/zeeslag.html
@@ -4,7 +4,7 @@
     <link href="style/style.css" rel="stylesheet" type="text/css">
     <script src="scripts/zeeslag.js"></script>
     <title>
-        ZEESLAG
+        Spel: Zeeslag
     </title>
 </head>
 
